@@ -44,6 +44,7 @@ project(OrthancFramework)
 # issues if re-building the shared library after install!
 set(ORTHANC_INSTALL_PREFIX "${CMAKE_INSTALL_PREFIX}" CACHE PATH "")
 SET(UNIT_TESTS_WITH_HTTP_CONNEXIONS ON CACHE BOOL "Allow unit tests to make HTTP requests")
+set(BUILD_SHARED_LIBRARY ON CACHE BOOL "Whether to build a shared library instead of a static library")
 
 
 
@@ -262,37 +263,42 @@ if (CMAKE_SYSTEM_NAME STREQUAL "Emscripten")
     COMMAND ${CMAKE_COMMAND} -E touch ${CMAKE_CURRENT_BINARY_DIR}/OrthancFramework.js
     )
 else()
-  add_library(OrthancFramework SHARED
-    ${AUTOGENERATED_SOURCES}
-    ${ORTHANC_CORE_SOURCES}
-    ${ORTHANC_DICOM_SOURCES}
-    DllMain.cpp
-    )
-endif()
+  if (BUILD_SHARED_LIBRARY)
+    add_library(OrthancFramework SHARED
+      ${AUTOGENERATED_SOURCES}
+      ${ORTHANC_CORE_SOURCES}
+      ${ORTHANC_DICOM_SOURCES}
+      DllMain.cpp
+      )
 
+    # By default, hide all the symbols
+    set_target_properties(OrthancFramework PROPERTIES C_VISIBILITY_PRESET hidden)
+    set_target_properties(OrthancFramework PROPERTIES CXX_VISIBILITY_PRESET hidden)
 
-if (NOT CMAKE_SYSTEM_NAME STREQUAL "Emscripten")
-  # By default, hide all the symbols
-  set_target_properties(OrthancFramework PROPERTIES C_VISIBILITY_PRESET hidden)
-  set_target_properties(OrthancFramework PROPERTIES CXX_VISIBILITY_PRESET hidden)
+    # Configure the version of the shared library
+    set_target_properties(
+      OrthancFramework PROPERTIES 
+      VERSION ${ORTHANC_VERSION} 
+      SOVERSION ${ORTHANC_FRAMEWORK_SOVERSION}
+      )    
 
-  # Configure the version of the shared library
-  set_target_properties(
-    OrthancFramework PROPERTIES 
-    VERSION ${ORTHANC_VERSION} 
-    SOVERSION ${ORTHANC_FRAMEWORK_SOVERSION}
-    )
-endif()
+    target_link_libraries(OrthancFramework ${DCMTK_LIBRARIES})
 
+    if (LIBICU_LIBRARIES)
+      target_link_libraries(OrthancFramework ${LIBICU_LIBRARIES})
+    endif()
 
-target_link_libraries(OrthancFramework ${DCMTK_LIBRARIES})
-
-if (LIBICU_LIBRARIES)
-  target_link_libraries(OrthancFramework ${LIBICU_LIBRARIES})
-endif()
-
-if (${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
-  target_link_libraries(OrthancFramework winpthread)
+    if (${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
+      target_link_libraries(OrthancFramework winpthread)
+    endif()
+  else()
+    # Building a static library
+    add_library(OrthancFramework STATIC
+      ${AUTOGENERATED_SOURCES}
+      ${ORTHANC_CORE_SOURCES}
+      ${ORTHANC_DICOM_SOURCES}
+      )
+  endif()
 endif()
 
 
@@ -462,6 +468,7 @@ install(
   TARGETS OrthancFramework
   RUNTIME DESTINATION ${ORTHANC_INSTALL_PREFIX}/lib    # Destination for Windows
   LIBRARY DESTINATION ${ORTHANC_INSTALL_PREFIX}/lib    # Destination for Linux
+  ARCHIVE DESTINATION ${ORTHANC_INSTALL_PREFIX}/lib    # Destination for static library
   )
 
 if (CMAKE_SYSTEM_NAME STREQUAL "Emscripten")
@@ -517,6 +524,7 @@ if (NOT CMAKE_SYSTEM_NAME STREQUAL "Emscripten")
     -DUSE_GOOGLE_TEST_DEBIAN_PACKAGE:BOOL=${USE_GOOGLE_TEST_DEBIAN_PACKAGE}
     -DUSE_SYSTEM_BOOST:BOOL=${USE_SYSTEM_BOOST}
     -DUSE_SYSTEM_GOOGLE_TEST:BOOL=${USE_SYSTEM_GOOGLE_TEST}
+    -DORTHANC_FRAMEWORK_USE_SHARED:BOOL=${BUILD_SHARED_LIBRARY}
 
     ${Flags}
     )
