@@ -42,18 +42,19 @@ else()
   add_definitions(-DUNIT_TESTS_WITH_HTTP_CONNEXIONS=0)
 endif()
 
-if (NOT ORTHANC_FRAMEWORK_STATIC)
-  set(ENABLE_DCMTK ON)
-  set(ENABLE_LUA ON)
-  set(ENABLE_PUGIXML ON)
-  set(ENABLE_SQLITE ON)
+set(ENABLE_DCMTK ON)
+set(ENABLE_GOOGLE_TEST ON)
+set(ENABLE_LUA ON)
+set(ENABLE_PUGIXML ON)
+set(ENABLE_SQLITE ON)
+set(ENABLE_WEB_CLIENT ON)
 
+if (NOT ORTHANC_FRAMEWORK_STATIC)
   set(USE_SYSTEM_GOOGLE_TEST ON CACHE BOOL "Use the system version of Google Test")
 else()
   set(USE_SYSTEM_GOOGLE_TEST OFF CACHE INTERNAL "")
 endif()
   
-set(ENABLE_GOOGLE_TEST ON)
 include(${CMAKE_SOURCE_DIR}/../Resources/CMake/DownloadOrthancFramework.cmake)
 include(${CMAKE_SOURCE_DIR}/../Resources/CMake/BoostConfiguration.cmake)
 include(${CMAKE_SOURCE_DIR}/../Resources/CMake/GoogleTestConfiguration.cmake)
